--- a/EnumExtensionsGenerator/EnumExtensionsGenerator.Sample/EnumExtensionsGenerator.Sample.csproj
+++ b/EnumExtensionsGenerator/EnumExtensionsGenerator.Sample/EnumExtensionsGenerator.Sample.csproj
@@ -1,14 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
-        <OutputType>Exe</OutputType>
         <TargetFramework>net7.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <ImplicitUsings>enable</ImplicitUsings>
+        <OutputType>Exe</OutputType>
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\EnumExtensionsGenerator\EnumExtensionsGenerator.csproj" />
+        <ProjectReference Include="..\EnumExtensionsGenerator\EnumExtensionsGenerator.csproj">
+            <OutputItemType>Analyzer</OutputItemType>
+            <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+        </ProjectReference>
     </ItemGroup>
-
 </Project>
