--- a/EnumExtensionsGenerator/EnumExtensionsGenerator/EnumExtensionsGenerator.csproj
+++ b/EnumExtensionsGenerator/EnumExtensionsGenerator/EnumExtensionsGenerator.csproj
@@ -5,14 +5,16 @@
         <Nullable>enable</Nullable>
 
         <LangVersion>11</LangVersion>
+
+        <IsRoslynComponent>true</IsRoslynComponent>
+        <AnalyzerLanguage>cs</AnalyzerLanguage>
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.3" PrivateAssets="all"/>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0" PrivateAssets="all"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.1" PrivateAssets="all" />
     </ItemGroup>
 
     <ItemGroup>
-        <None Include="../../README.md" Pack="true" PackagePath="\"/>
+        <None Include="../../README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 </Project>
