--- a/EnumExtensionsGenerator/EnumExtensionsGenerator.Sample/EnumExtensionsGenerator.Sample.csproj
+++ b/EnumExtensionsGenerator/EnumExtensionsGenerator.Sample/EnumExtensionsGenerator.Sample.csproj
@@ -7,6 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\EnumExtensionsGenerator.Attributes\EnumExtensionsGenerator.Attributes.csproj" />
         <ProjectReference Include="..\EnumExtensionsGenerator\EnumExtensionsGenerator.csproj">
             <OutputItemType>Analyzer</OutputItemType>
             <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
