--- a/EnumExtensionsGenerator/EnumExtensionsGenerator.Tests/EnumExtensionsGenerator.Tests.csproj
+++ b/EnumExtensionsGenerator/EnumExtensionsGenerator.Tests/EnumExtensionsGenerator.Tests.csproj
@@ -9,8 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0"/>
-        <PackageReference Include="xunit" Version="2.4.2"/>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0" />
+        <PackageReference Include="xunit" Version="2.4.2" />
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
             <PrivateAssets>all</PrivateAssets>
@@ -22,6 +22,10 @@
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\EnumExtensionsGenerator\EnumExtensionsGenerator.csproj"/>
+        <ProjectReference Include="..\EnumExtensionsGenerator.Attributes\EnumExtensionsGenerator.Attributes.csproj" />
+        <ProjectReference Include="..\EnumExtensionsGenerator\EnumExtensionsGenerator.csproj">
+            <OutputItemType>Analyzer</OutputItemType>
+            <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
+        </ProjectReference>
     </ItemGroup>
 </Project>
