--- a/EnumExtensionsGenerator/EnumExtensionsGenerator.Attributes/EnumExtensionsGenerator.Attributes.csproj
+++ b/EnumExtensionsGenerator/EnumExtensionsGenerator.Attributes/EnumExtensionsGenerator.Attributes.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net7.0</TargetFramework>
+        <TargetFramework>netstandard2.0</TargetFramework>
         <Nullable>enable</Nullable>
+        <LangVersion>11</LangVersion>
     </PropertyGroup>
 </Project>
