--- a/EnumExtensionsGenerator/EnumExtensionsGenerator/EnumExtensionsGenerator.csproj
+++ b/EnumExtensionsGenerator/EnumExtensionsGenerator/EnumExtensionsGenerator.csproj
@@ -16,4 +16,8 @@
     <ItemGroup>
         <None Include="../../README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\EnumExtensionsGenerator.Attributes\EnumExtensionsGenerator.Attributes.csproj" />
+    </ItemGroup>
 </Project>
